<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/borders">


        <TextView
            android:id="@+id/fr7_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Now_What_would_you_like_to_do"
            android:textColor="@color/primaryColor"
            android:textSize="20sp" />


        <Button
            android:id="@+id/fr7_btn1"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/fr7_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bordersbuttom"
            android:text="@string/Main_Screen"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/fr7_btn2"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/fr7_btn1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bordersbuttom"
            android:text="@string/Login_page"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/fr7_btn3"
            android:layout_width="180dp"
            android:layout_height="62dp"
            android:layout_below="@+id/fr7_btn2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bordersbuttom"
            android:text="@string/New_Registration_str"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/fr7_btn4"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/fr7_btn3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bordersbuttom"
            android:text="@string/Serch_takeatour"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"

            />

    </RelativeLayout>

</LinearLayout>