<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/white"
    >


    <TextView
        android:id="@+id/Text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/noVehiclesFound"
        android:textColor="@color/primaryColor" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borders_quicksearch_btn"
            android:text="@string/RegisterVehicle_Btn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"

            android:layout_toRightOf="@+id/CancelButton"
            android:layout_toEndOf="@+id/CancelButton"
            />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borders_quicksearch_btn"
            android:text="@string/Dismiss_txt"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"

            />



    </RelativeLayout>




</LinearLayout>