<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="rta.ae.sharekni.RegisterVehicle">



    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/borders"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"

        >


        <LinearLayout
            android:id="@+id/File_number_vehicle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/user_register_border"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/File_num_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borders_edit_txt_user_register"
                android:hint="@string/Register_Vehicle_Driving_License_No"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@+id/edit_reg_lname"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColorHint="@color/primaryColor"
                android:textSize="15sp"
                android:inputType="number"

                />


        </LinearLayout>



        <RelativeLayout
            android:id="@+id/datepicker_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/File_number_vehicle"
            android:background="@drawable/user_register_border">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/calicon"

                />


            <TextView
                android:id="@+id/txt_dayOfWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                 />


            <TextView
                android:id="@+id/Register_comma_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/txt_dayOfWeek"
                android:layout_toRightOf="@+id/txt_dayOfWeek"
                android:text=","
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/txt_dayOfWeek"
                android:layout_toRightOf="@+id/txt_dayOfWeek"
                android:padding="3dp"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
               />

            <TextView
                android:id="@+id/txt_beforeCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:padding="3dp"
                android:text="@string/dob"
                android:textColor="@color/primaryColor"
                android:textSize="15sp"
                />

        </RelativeLayout>




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datepicker_id"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_register_vehicle_1"
            android:text="@string/Btn_Submit_txt"
            android:layout_centerHorizontal="true"
            android:background="@drawable/user_register_border_button"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            />



    </RelativeLayout>


    <TextView
        android:id="@+id/driver_profile_RouteEnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/testborder1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/Register_Vehicle_Trraffic_Number_Border_Title_"
        android:textSize="20sp"
        android:textColor="@color/primaryColor"
        />



</RelativeLayout>
